style: fix collapsing sections

--- a/src/app/components/Browser/Browser.module.css
+++ b/src/app/components/Browser/Browser.module.css
@@ -1,6 +1,8 @@
 .container {
   width: 100%;
   flex-grow: 1;
+  min-height: 0;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   background-color: var(--color-dark-400);
@@ -8,6 +10,7 @@
 
 .content {
   flex-grow: 1;
+  min-height: 0;
   padding: 1rem;
   display: flex;
   overflow-y: auto;
